Apply `--add-exports` to Java 16+ services based on manifest entries
This provides the same functionality as
https://github.com/palantir/gradle-baseline/pull/1944/